# micro-kiki

./: .gitattributes  .gitignore  AGENTS.md  BRANCH-neuroscience.md  CITATION.cff  CLAUDE.md  CONTRIBUTORS.md  MIGRATION.md  MODEL_CARD-v0.3.md  MODEL_CARD.md  README.md  SECURITY.md  pyproject.toml
.omc/: brainstorm-oplora.md
.ralph/: CLAUDE.md  guardrails.md  prd.json  progress.txt
.ralph-v0.2/: CLAUDE.md  guardrails.md  loop.py  prd.json  progress.txt
.ralph-v0.3/: CLAUDE.md  guardrails.md  loop.py  prd.json  progress.txt
.remember/: remember.md
.serena/: project.yml
configs/: AGENTS.md  CLAUDE.md  capabilities.yaml  curriculum-adaptive.json  dispatcher_capabilities.yaml  meta_intents.yaml  mlx-foundations-r32.yaml  mlx-server.json  search_backends.yaml  stack-01-chat-fr.yaml  stack-02-reasoning.yaml  stack-03-python.yaml  stack-04-typescript.yaml  stack-05-cpp.yaml  stack-06-rust.yaml  stack-07-html-css.yaml  stack-08-shell.yaml  stack-09-sql.yaml  stack-10-yaml-json.yaml  stack-11-docker.yaml  stack-12-kicad-dsl.yaml  stack-13-spice.yaml  stack-14-lua-upy.yaml  stack-15-embedded.yaml  stack-16-stm32.yaml  stack-17-iot.yaml  stack-18-freecad.yaml  stack-19-platformio.yaml  stack-20-power.yaml  stack-21-emc.yaml  stack-22-dsp.yaml  stack-23-spice-sim.yaml  stack-24-electronics.yaml  stack-25-kicad-pcb.yaml  stack-26-web-frontend.yaml  stack-27-web-backend.yaml  stack-28-music-audio.yaml  stack-29-devops.yaml  stack-30-llm-orch.yaml  stack-31-math.yaml  (+2 more)
data/: stackoverflow_tags.json
deploy/: AGENTS.md  README.md
docker/: AGENTS.md
docs/: AGENTS.md  c3-pii-audit.md  cookbook-v0.3.md  data-sources.md  paper-outline-triple-hybrid.md  setup-studio-neuro.md
examples/: bias_check.py  chat_fr.py  code_python.py  forgetting_check.py  memory_aeon.py
hardware/: AGENTS.md  spi_bus_4devices.kicad_sch
launchd/: com.electron.full-pipeline.plist
(+712 files in other folders)
