[project]
name = "micro-kiki"
version = "0.1.0"
description = "32 domain experts (MoE-LoRA) on Qwen3.5-4B base"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
  "numpy>=1.26",
  "huggingface-hub>=0.28",
]

[project.optional-dependencies]
train = [
  "torch>=2.4",
  "transformers>=4.46",
  "peft>=0.13",
  "trl>=0.12",
  "accelerate",
  "bitsandbytes",
  "datasets",
]
mlx = [
  "mlx>=0.26",
  "mlx-lm>=0.30",
]
serve = [
  "vllm",
  "fastapi",
  "uvicorn",
]
agentic = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring real models or SSH (skipped by default)",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]
